style(contact-card): add `white-space: nowrap` to prevent action text overflow

--- a/src/app/pages/contact/components/contact-card/contact-card.component.scss
+++ b/src/app/pages/contact/components/contact-card/contact-card.component.scss
@@ -85,6 +85,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: nowrap;
 }
 
 :host ::ng-deep {
